feat: improve UI

--- a/MaxPos.csproj
+++ b/MaxPos.csproj
@@ -1,12 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
+        <OutputType>WinExe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <PublishAot>true</PublishAot>
         <InvariantGlobalization>true</InvariantGlobalization>
+        <IlcDisableReflection>false</IlcDisableReflection>
+        <EnableRequestDelegateGenerator>true</EnableRequestDelegateGenerator>
+        <TrimMode>link</TrimMode>
     </PropertyGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Avalonia" Version="11.2.3"/>
+        <PackageReference Include="Avalonia.Desktop" Version="11.2.3"/>
+        <PackageReference Include="Avalonia.Diagnostics" Version="11.2.3" Condition="'$(Configuration)' == 'Debug'"/>
+        <PackageReference Include="Avalonia.Themes.Simple" Version="11.2.3"/>
+    </ItemGroup>
 
 </Project>
